# tonic-sandbox

./: Cargo.toml  README.md  aqua.yaml  build.rs  compose.yaml  justfile
src/: app.rs  config.rs  logger.rs  main.rs
