[package]
name = "tonic-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-graphql = "7.0.5"
chrono = "0.4.38"
serde = "1.0.203"
sqlx = "0.7.4"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "json",
  "env-filter",
  "chrono",
] }
tonic = "0.11.0"
tonic-health = "0.11.0"
prost = "0.12.0"
libc = "0.2"

[build-dependencies]
tonic-build = "0.11.0"
